--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-/* جميع الأنماط السابقة تبقى كما هي */
+/* جميع الأنماط السابقة تبقى كما هي مع بعض التحسينات */
 :root {
   --primary-color: #8a2be2;
   --secondary-color: #ffd814;
@@ -30,7 +30,7 @@ body {
   /* إصلاح مشكلة الرجفة */
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: graxy;
 }
 
 header {
@@ -139,6 +139,8 @@ header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  /* جعل الأقسام ثابتة دائماً */
+  display: block !important;
 }
 
 .categories-bar {
@@ -149,6 +151,8 @@ header {
   -ms-overflow-style: none;
   gap: 8px;
   background: white;
+  /* جعل الأقسام ثابتة دائماً */
+  position: static;
 }
 
 .categories-bar::-webkit-scrollbar {
@@ -1046,6 +1050,26 @@ header {
   .categories-container {
     top: 110px;
   }
+  
+  /* تحسينات إضافية للشاشات الصغيرة */
+  .header-buttons button {
+    font-size: 12px;
+    padding: 5px 8px;
+  }
+  
+  .product-name {
+    font-size: 14px;
+  }
+  
+  .search-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  #searchBox {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 @media (max-width: 480px) {
@@ -1072,6 +1096,21 @@ header {
     padding: 6px 12px;
     font-size: 12px;
   }
+  
+  /* تحسينات إضافية للشاشات الصغيرة جداً */
+  .modal-content {
+    padding: 15px;
+    margin: 10px auto;
+  }
+  
+  .invoice-table {
+    font-size: 14px;
+  }
+  
+  .invoice-table th,
+  .invoice-table td {
+    padding: 8px 10px;
+  }
 }
 
 @media (max-width: 360px) {
@@ -1086,6 +1125,16 @@ header {
   .categories-bar {
     padding: 8px 5px;
     gap: 5px;
+  }
+  
+  /* تحسينات إضافية للشاشات الصغيرة جداً */
+  .header-buttons {
+    gap: 3px;
+  }
+  
+  .header-buttons button {
+    font-size: 11px;
+    padding: 4px 6px;
   }
 }
 
@@ -1260,6 +1309,33 @@ header {
   0% { transform: scale(1); }
   50% { transform: scale(1.01); }
   100% { transform: scale(1); }
+}
+
+/* شريط العروض المتحرك */
+.moving-offer-bar {
+  position: sticky;
+  top: 200px;
+  background: linear-gradient(135deg, #ff6600, #ff3300);
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  font-weight: bold;
+  z-index: 997;
+  display: none;
+  overflow: hidden;
+  white-space: nowrap;
+  box-shadow: 0 2px 10px rgba(255, 102, 0, 0.3);
+}
+
+.moving-offer-text {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 15s linear infinite;
+}
+
+@keyframes marquee {
+  0% { transform: translate(0, 0); }
+  100% { transform: translate(-100%, 0); }
 }
 
 /* زر طلب منتج غير متوفر */
@@ -1521,6 +1597,48 @@ img {
 .category-btn {
   position: relative;
 }
+
+/* تحسينات للشاشات الصغيرة جداً */
+@media (max-width: 320px) {
+  .products-grid {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 8px;
+    padding: 8px;
+  }
+  
+  .product-image-container {
+    height: 100px;
+  }
+  
+  .product-name {
+    font-size: 12px;
+    height: 35px;
+  }
+  
+  .product-price {
+    font-size: 14px;
+  }
+  
+  .category-btn {
+    padding: 5px 10px;
+    font-size: 11px;
+  }
+}
+
+/* تحسينات للآيفون */
+@supports (-webkit-touch-callout: none) {
+  .categories-container {
+    position: -webkit-sticky;
+  }
+  
+  .new-products-sticky-bar {
+    position: -webkit-sticky;
+  }
+  
+  .moving-offer-bar {
+    position: -webkit-sticky;
+  }
+}
 </style>
 </head>
 <body class="hide-price">
@@ -1528,6 +1646,13 @@ img {
 <!-- شريط المنتجات الجديدة المثبت -->
 <div id="newProductsStickyBar" class="new-products-sticky-bar">
   🎉 منتجات جديدة اليوم! كل لحظة عندنا جديد 🎉
+</div>
+
+<!-- شريط العروض المتحرك -->
+<div id="movingOfferBar" class="moving-offer-bar">
+  <div class="moving-offer-text">
+    💥 خصم خاص للمندوب برعاية شركة جنة 💥 | 🚚 توصيل مجاني للطلبات فوق 500 جنيه 💥 | 📞 للطلب: 01022495795 💥 | 🎁 عروض خاصة على جميع المنتجات 💥
+  </div>
 </div>
 
 <div id="showPricesBar" onclick="showPasswordModal()">
@@ -1562,7 +1687,7 @@ img {
 
   <div class="search-container">
     <input type="text" id="searchBox" placeholder="🔍ابدأ و ابحث عن منتج...">
-    <button id="offerBtn">💥خصم خاص للمناديب</button>
+    <button id="offerBtn" onclick="showPasswordModal()">💥خصم خاص للمندوب</button>
   </div>
 
   <!-- الأزرار الإضافية تحت البحث -->
@@ -1822,9 +1947,12 @@ function togglePricesVisibility() {
   if (pricesVisible) {
     document.body.classList.remove('hide-price');
     document.getElementById('showPricesBar').style.display = 'none';
+    // إظهار شريط العروض المتحرك عند إدخال كلمة السر
+    document.getElementById('movingOfferBar').style.display = 'block';
   } else {
     document.body.classList.add('hide-price');
     document.getElementById('showPricesBar').style.display = 'block';
+    document.getElementById('movingOfferBar').style.display = 'none';
   }
 }
 
@@ -2735,8 +2863,12 @@ document.addEventListener('DOMContentLoaded', function() {
     const cartCount = cart.reduce((sum, qty) => qty ? sum + qty : sum, 0);
     document.getElementById('saveCartBtn').style.display = cartCount > 0 ? 'flex' : 'none';
   }, 1000);
+  
+  // إظهار شريط العروض المتحرك إذا كانت الأسعار ظاهرة
+  if (pricesVisible) {
+    document.getElementById('movingOfferBar').style.display = 'block';
+  }
 });
 </script>
 </body>
 </html>
-
