--- a/products.html
+++ b/products.html
@@ -1853,7 +1853,8 @@ img {
 
 <script>
 // إعدادات التطبيق
-const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxQCsDkj7GP1HPc8YfLuIIiQxval8l3OpapKN8TuHdGXiP_5juG_9CMQ1qSbVLGCcV9lg/exec";
+const SCRIPT_PRODUCTS_URL = fetch("https://script.google.com/macros/s/AKfycbxQCsDkj7GP1HPc8YfLuIIiQxval8l3OpapKN8TuHdGXiP_5juG_9CMQ1qSbVLGCcV9lg/exec?v=" + Date.now())
+
 const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
@@ -2887,3 +2888,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
