--- a/products.html
+++ b/products.html
@@ -269,7 +269,7 @@ header {
   height: 40px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-ramp: 2;
   -webkit-box-orient: vertical;
 }
 
@@ -1102,7 +1102,9 @@ header {
 
 @media (max-width: 360px) {
   .products-grid {
-    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 8px;
+    padding: 8px;
   }
   
   .product-image-container {
@@ -1715,9 +1717,36 @@ img {
     min-width: 100%;
   }
 }
+
+/* مؤشر التحديث الإجباري */
+.force-update-indicator {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background: #ff4444;
+  color: white;
+  padding: 8px 15px;
+  border-radius: 20px;
+  font-size: 12px;
+  z-index: 1008;
+  display: none;
+  animation: pulse-update 1s infinite;
+  cursor: pointer;
+}
+
+@keyframes pulse-update {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
 </style>
 </head>
 <body class="hide-price">
+
+<!-- مؤشر التحديث الإجباري -->
+<div id="forceUpdateIndicator" class="force-update-indicator" onclick="forceUpdate()">
+  🔄 تحديث البيانات
+</div>
 
 <!-- شريط الإشعارات الجانبي -->
 <div class="notifications-sidebar">
@@ -1929,6 +1958,7 @@ let isSearching = false;
 let currentSearchTerm = "";
 let currentCategory = "all";
 let autoUpdateInterval;
+let forceUpdateInterval;
 
 // إعدادات الشحن المجاني
 const FREE_SHIPPING_THRESHOLD = 500;
@@ -2196,7 +2226,7 @@ function renderProducts(data, containerElement){
                            `<div style="color: #8a2be2; font-weight: bold; padding: 8px; background: #f0f8ff; border-radius: 6px; text-align: center;">
                               الكمية محددة: ${fixedQuantity}
                             </div>
-                            <button class="add-to-cart-btn" onclick="addToCart(${index})">أضف إلى السلة</button>` :
+                            <button class="add-to-cart-btn" onclick="addToCartWithFixedQuantity(${index}, ${fixedQuantity})">أضف إلى السلة</button>` :
                            `<input type="number" class="quantity-input" min="1" value="${cart[index] || 1}" data-index="${index}">
                             <button class="add-to-cart-btn" onclick="addToCart(${index})">أضف إلى السلة</button>`
                          }
@@ -2223,6 +2253,56 @@ function renderProducts(data, containerElement){
   });
   
   togglePricesVisibility();
+}
+
+// دالة محسنة لإضافة المنتج مع الكمية الثابتة
+function addToCartWithFixedQuantity(index, fixedQuantity) {
+  if (!pricesVisible) {
+    showPasswordModal();
+    showToast('يجب إدخال كلمة السر أولاً لإضافة المنتجات');
+    return;
+  }
+  
+  // إضافة الكمية الثابتة مباشرة
+  cart[index] = fixedQuantity;
+  updateCartCount();
+  updateShippingBar();
+  
+  // تشغيل صوت الإشعار عند إضافة منتج جديد
+  if (productsData[index].name && productsData[index].name.includes("..")) {
+    playNotificationSound();
+  }
+  
+  // استخدام الاسم النظيف في الإشعار
+  const cleanName = cleanProductName(productsData[index].name);
+  showToast(`${cleanName} (${fixedQuantity}) تم إضافته إلى السلة`);
+}
+
+// دالة محسنة لإضافة المنتج مع الكمية العادية
+function addToCart(index){
+  if (!pricesVisible) {
+    showPasswordModal();
+    showToast('يجب إدخال كلمة السر أولاً لإضافة المنتجات');
+    return;
+  }
+  
+  const input = document.querySelector(`#products-container input[data-index='${index}']`);
+  const quantity = parseInt(input.value);
+  if(quantity <= 0) return;
+  
+  // إضافة الكمية المحددة فقط (بدون إضافة كمية إضافية)
+  cart[index] = quantity;
+  updateCartCount();
+  updateShippingBar();
+  
+  // تشغيل صوت الإشعار عند إضافة منتج جديد
+  if (productsData[index].name && productsData[index].name.includes("..")) {
+    playNotificationSound();
+  }
+  
+  // استخدام الاسم النظيف في الإشعار
+  const cleanName = cleanProductName(productsData[index].name);
+  showToast(`${cleanName} تم إضافته إلى السلة`);
 }
 
 // دالة محسنة لفلترة المنتجات حسب التصنيف
@@ -2330,36 +2410,6 @@ function updateCartCount(){
   const badge = document.getElementById("cart-count");
   badge.style.display = count > 0 ? "inline-block" : "none";
   badge.innerText = count;
-}
-
-function addToCart(index){
-  if (!pricesVisible) {
-    showPasswordModal();
-    showToast('يجب إدخال كلمة السر أولاً لإضافة المنتجات');
-    return;
-  }
-  
-  const fixedQuantity = extractQuantityFromName(productsData[index].name);
-  let quantity = fixedQuantity;
-  
-  if (!fixedQuantity) {
-    const input = document.querySelector(`#products-container input[data-index='${index}']`);
-    quantity = parseInt(input.value);
-  }
-  
-  if(quantity <= 0) return;
-  cart[index] = (cart[index] || 0) + quantity;
-  updateCartCount();
-  updateShippingBar();
-  
-  // تشغيل صوت الإشعار عند إضافة منتج جديد
-  if (productsData[index].name && productsData[index].name.includes("..")) {
-    playNotificationSound();
-  }
-  
-  // استخدام الاسم النظيف في الإشعار
-  const cleanName = cleanProductName(productsData[index].name);
-  showToast(`${cleanName} تم إضافته إلى السلة`);
 }
 
 // دالة جلب المنتجات من API مع التحديث التلقائي - محسنة للأداء
@@ -2946,10 +2996,31 @@ function sendProductRequest() {
   showToast('تم إرسال طلبك بنجاح');
 }
 
-// تهيئة التحديث التلقائي
+// دالة التحديث الإجباري
+function forceUpdate() {
+  document.getElementById('forceUpdateIndicator').style.display = 'none';
+  document.getElementById('autoUpdateIndicator').style.display = 'block';
+  
+  // مسح البيانات المخزنة محلياً لإجبار التحديث
+  localStorage.removeItem("products");
+  localStorage.removeItem("products_cache_time");
+  
+  // إعادة تحميل البيانات
+  fetchProducts().then(() => {
+    document.getElementById('autoUpdateIndicator').style.display = 'none';
+    showToast('تم تحديث البيانات بنجاح');
+  });
+}
+
+// تهيئة التحديث التلقائي والإجباري
 function initializeAutoUpdate() {
   // تحديث المنتجات كل 60 ثانية
   autoUpdateInterval = setInterval(fetchProducts, 60000);
+  
+  // التحديث الإجباري كل 5 دقائق
+  forceUpdateInterval = setInterval(() => {
+    document.getElementById('forceUpdateIndicator').style.display = 'block';
+  }, 5 * 60 * 1000); // 5 دقائق
 }
 
 // تهيئة الصفحة
@@ -2957,7 +3028,7 @@ document.addEventListener('DOMContentLoaded', function() {
   // تحميل المنتجات من API
   fetchProducts();
   
-  // بدء التحديث التلقائي
+  // بدء التحديث التلقائي والإجباري
   initializeAutoUpdate();
   
   // تحميل السلة المحفوظة
